[gd_scene load_steps=9 format=3 uid="uid://dbjcwgms3fd78"]

[ext_resource type="Script" uid="uid://bulp4g77en3qf" path="res://Scripts/selection_menu.gd" id="1_r2ge3"]
[ext_resource type="StyleBox" uid="uid://bhyxgbt3lvtl8" path="res://Resources/Styles/button_style.tres" id="2_e1ouj"]
[ext_resource type="PackedScene" uid="uid://6mgfl26hy227" path="res://Scenes/Levels/level_1.tscn" id="2_e2lmm"]
[ext_resource type="PackedScene" uid="uid://b6r4jmpo85fr7" path="res://Scenes/Levels/level_2.tscn" id="3_bw2gc"]
[ext_resource type="PackedScene" uid="uid://crxd46k35kbox" path="res://Scenes/unit_info_panel.tscn" id="3_e2lmm"]
[ext_resource type="Script" uid="uid://dajw61vh5kchp" path="res://Scripts/ResourceScripts/unit_data.gd" id="4_547t1"]
[ext_resource type="Resource" uid="uid://dulep71up18jy" path="res://Resources/ClassData/knight_data.tres" id="5_pr5gi"]
[ext_resource type="Resource" uid="uid://ckbg3nxtt1cky" path="res://Resources/ClassData/priest_data.tres" id="6_hrbqk"]

[node name="SelectionMenu" type="Control" node_paths=PackedStringArray("LevelSelectionContainer", "UnitCustomizationContainer", "UnitInfoPanel", "StartLevelButton")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r2ge3")
LevelSelectionContainer = NodePath("MarginContainer/VBoxContainer/LevelSelectionContainer")
UnitCustomizationContainer = NodePath("MarginContainer/VBoxContainer/MainContentContainer/UnitCustomizationContainer")
UnitInfoPanel = NodePath("MarginContainer/VBoxContainer/MainContentContainer/UnitInfoPanel")
StartLevelButton = NodePath("MarginContainer/VBoxContainer/StartLevelButton")
Level1Scene = ExtResource("2_e2lmm")
Level2Scene = ExtResource("3_bw2gc")
PlayerClasses = Array[ExtResource("4_547t1")]([ExtResource("5_pr5gi"), ExtResource("6_hrbqk")])

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.144052, 0.186156, 0.219676, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="LevelSelectionContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Level1Button" type="Button" parent="MarginContainer/VBoxContainer/LevelSelectionContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
theme_override_styles/disabled = ExtResource("2_e1ouj")
theme_override_styles/normal = ExtResource("2_e1ouj")
text = "Level 1"

[node name="Level2Button" type="Button" parent="MarginContainer/VBoxContainer/LevelSelectionContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
theme_override_styles/disabled = ExtResource("2_e1ouj")
theme_override_styles/normal = ExtResource("2_e1ouj")
text = "Level 2"

[node name="MainContentContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="UnitCustomizationContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MainContentContainer"]
layout_mode = 2

[node name="UnitInfoPanel" parent="MarginContainer/VBoxContainer/MainContentContainer" instance=ExtResource("3_e2lmm")]
layout_mode = 2

[node name="StartLevelButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
theme_override_styles/disabled = ExtResource("2_e1ouj")
theme_override_styles/normal = ExtResource("2_e1ouj")
text = "Start Level"

[connection signal="pressed" from="MarginContainer/VBoxContainer/LevelSelectionContainer/Level1Button" to="." method="_on_level_1_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/LevelSelectionContainer/Level2Button" to="." method="_on_level_2_button_pressed"]
